--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Some site</title>
+        <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 	</head>
 	<body>
 		<header>
